Updates to Kafka 3, Zipkin 3 and the latest build setup (#92)
Signed-off-by: Adrian Cole <adrian@tetrate.io>