@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2021 The OpenZipkin Authors
+ * Copyright 2019-2024 The OpenZipkin Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  * in compliance with the License. You may obtain a copy of the License at
@@ -254,7 +254,7 @@ final class KafkaSpanStore implements SpanStore, Traces, ServiceAndSpanNames {
     GetTraceCall(KafkaStreams traceStoreStream,
       BiFunction<String, Integer, String> httpBaseUrl,
       String traceId) {
-      super(traceStoreStream, TRACES_STORE_NAME, httpBaseUrl, String.format("/traces/%s", traceId),
+      super(traceStoreStream, TRACES_STORE_NAME, httpBaseUrl, "/traces/%s".formatted(traceId),
         traceId);
       this.traceStoreStream = traceStoreStream;
       this.httpBaseUrl = httpBaseUrl;
